--- a/GameMoi/GameMoi.vcxproj.filters
+++ b/GameMoi/GameMoi.vcxproj.filters
@@ -42,8 +42,8 @@
     <ClInclude Include="define.h">
       <Filter>Framework</Filter>
     </ClInclude>
-    <ClInclude Include="EnemyObject.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="TileMap.h">
+      <Filter>Framework</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -74,8 +74,8 @@
     <ClCompile Include="TimeSpan.cpp">
       <Filter>Framework</Filter>
     </ClCompile>
-    <ClCompile Include="EnemyObject.cpp">
-      <Filter>Resource Files</Filter>
+    <ClCompile Include="TileMap.cpp">
+      <Filter>Framework</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
