Thêm Whip và axe

--- a/GameMoi/GameMoi.vcxproj.filters
+++ b/GameMoi/GameMoi.vcxproj.filters
@@ -45,6 +45,15 @@
     <ClInclude Include="TileMap.h">
       <Filter>Framework</Filter>
     </ClInclude>
+    <ClInclude Include="Weapon.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Whip.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Axe.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -76,6 +85,15 @@
     </ClCompile>
     <ClCompile Include="TileMap.cpp">
       <Filter>Framework</Filter>
+    </ClCompile>
+    <ClCompile Include="Whip.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Weapon.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Axe.cpp">
+      <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
