--- a/GameMoi/GameMoi.vcxproj.filters
+++ b/GameMoi/GameMoi.vcxproj.filters
@@ -57,6 +57,15 @@
     <ClInclude Include="Camera.h">
       <Filter>Framework</Filter>
     </ClInclude>
+    <ClInclude Include="GameInit.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="WindowProc.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
+    <ClInclude Include="GameLoop.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Player.cpp">
@@ -96,6 +105,15 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameInit.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WindowProc.cpp">
+      <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameLoop.cpp">
       <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
