Tạo file info cho player-enemy

--- a/GameMoi/GameMoi.vcxproj
+++ b/GameMoi/GameMoi.vcxproj
@@ -137,10 +137,12 @@
     <ClInclude Include="GameLoop.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="define.h" />
+    <ClInclude Include="Info.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Render.h" />
+    <ClInclude Include="StopWatch.h" />
     <ClInclude Include="TileMap.h" />
-    <ClInclude Include="Time.h" />
+    <ClInclude Include="GameTime.h" />
     <ClInclude Include="TimeSpan.h" />
     <ClInclude Include="Weapon.h" />
     <ClInclude Include="Whip.h" />
@@ -154,11 +156,13 @@
     <ClCompile Include="GameInit.cpp" />
     <ClCompile Include="GameLoop.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Info.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rended.cpp" />
+    <ClCompile Include="StopWatch.cpp" />
     <ClCompile Include="TileMap.cpp" />
-    <ClCompile Include="Time.cpp" />
+    <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="TimeSpan.cpp" />
     <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="Whip.cpp" />
