feat(item): add basic components for breakable items

--- a/GameMoi/GameMoi.vcxproj
+++ b/GameMoi/GameMoi.vcxproj
@@ -136,10 +136,15 @@
     <ClInclude Include="Models\Characters\Info.h" />
     <ClInclude Include="Models\Characters\Player\Player.h" />
     <ClInclude Include="Models\GameObject.h" />
+    <ClInclude Include="Models\Items\BreakableItem.h" />
+    <ClInclude Include="Models\Items\Item.h" />
+    <ClInclude Include="Models\Items\ItemSpriteRects.h" />
     <ClInclude Include="Models\Weapons\Axe.h" />
     <ClInclude Include="Models\Weapons\Weapon.h" />
     <ClInclude Include="Models\Weapons\Whip.h" />
+    <ClInclude Include="Models\World.h" />
     <ClInclude Include="Render.h" />
+    <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Tilemap\Collider.h" />
     <ClInclude Include="Tilemap\StairCollider.h" />
     <ClInclude Include="Tilemap\TileMap.h" />
@@ -165,10 +170,15 @@
     <ClCompile Include="Models\Characters\Player\PlayerStair.cpp" />
     <ClCompile Include="Models\Characters\Player\PlayerUpdate.cpp" />
     <ClCompile Include="Models\GameObject.cpp" />
+    <ClCompile Include="Models\Items\BreakableItem.cpp" />
+    <ClCompile Include="Models\Items\Item.cpp" />
+    <ClCompile Include="Models\Items\ItemSpriteRects.cpp" />
     <ClCompile Include="Models\Weapons\Axe.cpp" />
     <ClCompile Include="Models\Weapons\Weapon.cpp" />
     <ClCompile Include="Models\Weapons\Whip.cpp" />
+    <ClCompile Include="Models\World.cpp" />
     <ClCompile Include="Rended.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Tilemap\Collider.cpp" />
     <ClCompile Include="Tilemap\TileMap.cpp" />
     <ClCompile Include="Utilities\GameInit.cpp" />
@@ -188,6 +198,7 @@
     <Image Include="Image\frame2tileset.png" />
     <Image Include="Image\frame3.png" />
     <Image Include="Image\frame3tileset.png" />
+    <Image Include="Image\items.png" />
     <Image Include="Image\map.png" />
     <Image Include="Image\simon.jpg" />
     <Image Include="Image\tileset.png" />
